# speech-service

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose-dev.yml  docker-compose.yml  fly.toml  pyproject.toml
stt_service/: app.py
tts_service/: app.py
